@@ -1,4 +1,24 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0821</STRONG> includes the following changes:
+<UL>
+	<LI> Fixed a bug in 0.9.5.0821 that causes loss of preferences when upgrade.</LI>
+</UL>
+
+Version <STRONG>0.9.5.0820</STRONG> includes the following changes:
+<UL>
+	<LI> Better default preferences</LI>
+	<LI> Works with TERM=xterm</LI>
+	<LI> Sets the COLORFGBG variable</LI>
+	<LI> No annoying reverse-video border</LI>
+	<LI> tput smso ; clear ; tput rmso -- works as expected</LI>
+	<LI> back_tab supported (the key and the function)</LI>
+	<LI> new-style xterm altscreens supported</LI>
+	<LI> Fixed NSLock warnings on 10.5</LI>
+	<LI> Horizontal scroll-wheel doesn't scroll vertically anymore</LI>
+	<LI> Improved numeric keypad behaviour, now acts like xterm</LI>
+	<LI> Fixed a nasty crashing bug</LI>
+</UL>
+	
 Version <STRONG>0.9.5.0611</STRONG> includes the following changes:
 <UL>
     <LI> Aoid crashes when memory runs out.</LI>
