@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.5.0611</title> 
+            <title>Version 0.9.5.0821</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
             <pubDate>Mon, 11 jun 2007 23:00:00 +0000</pubDate> 
-            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.5.0611.zip" length="1583911" type="application/octet-stream"/> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.5.0821.zip" length="1558763" type="application/octet-stream"/> 
         </item> 
     </channel> 
 </rss>
