@@ -24,6 +24,7 @@
 <LI><A HREF="http://sourceforge.net/users/yfabian/"><STRONG>Fabian</STRONG></A> </LI>
 <LI><A HREF="http://sourceforge.net/users/ujwal/"><STRONG>Ujwal S. Setlur</STRONG></A> </LI>
 <LI><A HREF="http://sourceforge.net/users/dnedrow/"><STRONG>David Nedrow</STRONG></A> </LI>
+<LI><A HREF="http://sourceforge.net/users/delx/"><STRONG>James Bunton</STRONG></A> </LI>
 </UL>
 
 <FONT SIZE="5"><STRONG>Thanks to:</STRONG></FONT><BR>
